# Servixa

./: .gitattributes  .gitignore  DOCKER_CHECKLIST.md  Dockerfile  INTERVIEW_QA.md  LLM_STUDY_PROMPT.md  PROJECT_DEEP_DIVE.md  README.md  app.py  baseline.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
env/: __init__.py  environment.py  grader.py  models.py  tasks.py
server/: app.py
